tests/typing/fail/tuple_random_access_fail.rb

y = [4,"blah"]
y[1] + 5
y[0].concat "hi"
